exp: Removes text-align center and fixes layout

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 :root {
   background-color: var(--joy-palette-primary-100);
+  color: var(--joy-palette-text-primary);
 }
 
 body {
