--- a/client/src/views/Layout/Layout.css
+++ b/client/src/views/Layout/Layout.css
@@ -15,6 +15,7 @@
 
 .header {
     position: sticky;
+    top: 0;
     height: 80px;
     background-color: white;
     width: 100%;
